6월 15일 장고.txt
자바계열
MVC - Model(db) View(jsp-ghkaus) Controller(sevlet)

파이썬
MTV - Model Templates View(Controller-제어)

RDBMS(관계형 데이터베이스)
ORM(lbject Relational Mapping) - 객체 관계형 데이터베이스
엔티티(ENTITY) - 테이블-> class로 만듬
ODBMS(객체형 데이터베이스) - 구현이 어려워서 안된다고 합니다.

(클래스(테이블)를)모델을 생성, 수정, 삭제하는 명령어
1. python manage.py makemigrations
2. python manage.py migrate

장고쉘
1. python manage.py shell
2. from poll.models import Question
3. from django.utils import timezone
4. Question.objects.all()

5. q = Question(question_text='당신의 취미는 무엇인가요?', pub_date=timezone.now())
6. q.save()
7. q.id - id가 잘 나오는지 확인, 처음은 1




제목, 발행일 -> 객체를 생성해 inset into가 아니라는 겁니다
sehll이라는건 입,출력을 할 수 있다는 말입니다.

CharField - VARCHAR2와 같음


새로운 크로스 플랫폼 PowerShell 사용 https://aka.ms/pscore6




(myvenv) PS C:\mypyweb\polls> python manage.py makemigrations
(myvenv) PS C:\mypyweb\polls> python manage.py shell
Python 3.11.3 (tags/v3.11.3:f3909b8, Apr  4 2023, 23:49:59) [MSC v.1934 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
(InteractiveConsole)
>>> from poll.models import Question
>>> from django.utils import timezone
>>> Question.objects.all()
<QuerySet []>
>>> q = Question(question_text='당신의 취미는 무엇인가요?', pub_date=timezone.now())
>>> q.save()
>>> q.id
1   
>>> q.question_text
'당신의 취미는 무엇인가요?'
>>> q.pub_date
>>> q.pub_date
datetime.datetime(2023, 6, 15, 3, 2, 50, 892900, tzinfo=datetime.timezone.utc)
>>> q2 = Question(question_text='당신이 좋아하는 음식은 무엇인가요?', pub_date=timezone.now())
>>> q2.save()
>>> q2.id
2
>>> q2.question_text
'당신이 좋아하는 음식은 무엇인가요?'
>>> Question.objects.all()
<QuerySet [<Question: Question object (1)>, <Question: Question object (2)>]>
>>> quit()
(myvenv) PS C:\mypyweb\polls> python manage.py shell
Python 3.11.3 (tags/v3.11.3:f3909b8, Apr  4 2023, 23:49:59) [MSC v.1934 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
(InteractiveConsole)
>>> from poll.models import Question
>>> form django.utils import timezone
  File "<console>", line 1
    form django.utils import timezone
         ^^^^^^
SyntaxError: invalid syntax
>>> from django.util import timezone
Traceback (most recent call last):
  File "<console>", line 1, in <module>
ModuleNotFoundError: No module named 'django.util'
>>> from django.utils import timezoen
Traceback (most recent call last):
  File "<console>", line 1, in <module>
ImportError: cannot import name 'timezoen' from 'django.utils' (C:\myvenv\Lib\site-packages\django\utils\__init__.py)
>>> from django.utils import imezone
Traceback (most recent call last):
  File "<console>", line 1, in <module>
ImportError: cannot import name 'imezone' from 'django.utils' (C:\myvenv\Lib\site-packages\django\utils\__init__.py)
>>> Question.objects.all()
<QuerySet [<Question: 당신의 취미는 무엇인가요?>, <Question: 당신이 좋아하는 음식은 무엇인가요?>]>
>>> Question.objects.get(id=2)
<Question: 당신이 좋아하는 음식은 무엇인가요?>
>>> data = Question.objects.get(id=2) 
>>> data.question_text
'당신이 좋아하는 음식은 무엇인가요?'
>>> data.question_text = "당신이 좋아하는 영화는 무엇인가요?"
>>> data.save()
>>> Question.objects.all()                                    
<QuerySet [<Question: 당신의 취미는 무엇인가요?>, <Question: 당신이 좋아하는 영화는 무엇인가요?>]>
>>>

